<resources>
    <string name="app_name">MyApplication</string>
    <string name="main_name">全部字帖</string>
    <string name="login_user_name">请输入登录账号</string>
    <string name="login_name">账户</string>
    <string name="login_pwd">密码</string>
    <string name="login_hint_pwd">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="registered">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registered_class_tv">选择班级</string>
    <string name="registered_phone_tv">请输入手机号</string>
    <string name="registered_sms_tv">获取验证码</string>
    <string name="registered_code_tv">请输入验证码</string>
    <string name="registered_pwd_tv">请输入验证码</string>
    <string name="registered_okpwd_tv">确认登录密码</string>
    <string name="registered_content_rb">我已阅读并同意《用户服务协议》</string>
    <string name="registered_btn">注册</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
</resources>
