<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registered"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="www.sinofreely.app.view.RegisteredActivity">
    <include layout="@layout/header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:id="@+id/registered_line_class"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:hint="@string/registered_class_tv"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/right_back"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/margin"
        android:background="#C8C8C8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:hint="@string/registered_phone_tv"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/margin"
        android:background="#C8C8C8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/registered_code_tv"
            android:gravity="left|center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#C8C8C8"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registered_sms_tv"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/margin"
        android:background="#C8C8C8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/registered_pwd_tv"
            android:gravity="left|center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/margin"
        android:background="#C8C8C8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/registered_okpwd_tv"
            android:gravity="left|center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/margin"
        android:background="#C8C8C8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_hegiht"
        style="@style/margin"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registered_rbt"
                android:text="@string/registered_content_rb"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/margin"
        android:textColor="@android:color/white"
        android:text="@string/registered_btn"
        android:background="@color/header_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        style="@style/margin"
        android:text="已有账户,去登陆"
        android:gravity="center"
        android:textColor="@color/header_bg"/>
</LinearLayout>
