<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="www.sinofreely.app.view.MainActivity">
    <include layout="@layout/header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/login_ico"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/login_bg">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/login_size"
                    android:textColor="@color/login_user"
                    android:layout_height="match_parent"
                    android:text="@string/login_name"/>
                <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textSize="@dimen/login_size"
                    android:layout_height="match_parent"
                    android:id="@+id/login_user_actv"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/login_user_name"
                    android:background="@null"
                    android:drawableTintMode="src_over"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_bg">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="@dimen/login_size"
                    android:textColor="@color/login_user"
                    android:text="@string/login_pwd"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textSize="@dimen/login_size"
                    android:singleLine="true"
                    android:imeOptions="actionGo"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_pwd_et"
                    android:inputType="numberPassword"
                    android:background="@null"
                    android:hint="@string/login_hint_pwd"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:id="@+id/login_registered"
                android:textColor="@color/login_user"
                android:text="@string/registered"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/login_user"
                android:text="@string/login_forget_pwd"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/login_btn"
            android:textSize="@dimen/login_size"
            android:textColor="@android:color/white"
            android:background="@drawable/login_btn"
            android:text="@string/login"/>
    </LinearLayout>

</RelativeLayout>
